modify custom.js add data-card

--- a/index.html
+++ b/index.html
@@ -2,54 +2,54 @@
 <html lang="fr">
 
 <head>
-  <meta HTTP-EQUIV="Pragma" CONTENT="no-cache">
-  <meta HTTP-EQUIV="Expires" CONTENT="-1">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="assets/css/style.css">
-  <title>Mr President</title>
+    <meta HTTP-EQUIV="Pragma" CONTENT="no-cache">
+    <meta HTTP-EQUIV="Expires" CONTENT="-1">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <title>Mr President</title>
 </head>
 
 <body>
-  <header>
-    <h1>Mr President</h1>
-  </header>
-  <main>
-    <div id="container">
-      <div class="mask front">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Obcaecati exercitationem alias, incidunt impedit quas maiores animi doloribus?</div>
-      <div class="mask front">Lorem ipsum dolor sit amet.</div>
-      <div class="mask front">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Harum laudantium alias, temporibus recusandae non obcaecati rerum consequatur sequi?</div>
-      <div class="mask front">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis laborum saepe quas optio suscipit.</div>
-      <div class="mask front"></div>
-      <div class="mask front"></div>
-      <div class="mask front"></div>
-      <div class="mask front"></div>
-      <div class="mask front"></div>
-      <div class="mask front"></div>
-      <div class="mask front"></div>
-      <div class="mask front"></div>
-      <div class="mask front"></div>
-      <div class="mask front"></div>
-      <div class="mask front"></div>
-      <div class="mask front"></div>
-      <div class="mask front"></div>
-      <div class="mask front"></div>
-      <div class="mask front"></div>
-      <div class="mask front"></div>
-      <div class="mask front"></div>
-      <div class="mask front"></div>
-      <div class="mask front"></div>
-      <div class="mask front"></div>
-      <div class="mask front"></div>
-      <div class="mask front"></div>
-      <div class="mask front"></div>
-      <div class="mask front"></div>
-    </div>
-  </main>
-  <footer></footer>
-  <script src="assets/js/custom.js"></script>
-  <script src="assets/js/class.js"></script>
+    <header>
+        <h1>Mr President</h1>
+    </header>
+    <main>
+        <div id="container">
+            <div data-card="" class="mask front">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Obcaecati exercitationem alias, incidunt impedit quas maiores animi doloribus?</div>
+            <div data-card="" class="mask front">Lorem ipsum dolor sit amet.</div>
+            <div data-card="" class="mask front">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Harum laudantium alias, temporibus recusandae non obcaecati rerum consequatur sequi?</div>
+            <div data-card="" class="mask front">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis laborum saepe quas optio suscipit.</div>
+            <div data-card="" class="mask front"></div>
+            <div data-card="" class="mask front"></div>
+            <div data-card="" class="mask front"></div>
+            <div data-card="" class="mask front"></div>
+            <div data-card="" class="mask front"></div>
+            <div data-card="" class="mask front"></div>
+            <div data-card="" class="mask front"></div>
+            <div data-card="" class="mask front"></div>
+            <div data-card="" class="mask front"></div>
+            <div data-card="" class="mask front"></div>
+            <div data-card="" class="mask front"></div>
+            <div data-card="" class="mask front"></div>
+            <div data-card="" class="mask front"></div>
+            <div data-card="" class="mask front"></div>
+            <div data-card="" class="mask front"></div>
+            <div data-card="" class="mask front"></div>
+            <div data-card="" class="mask front"></div>
+            <div data-card="" class="mask front"></div>
+            <div data-card="" class="mask front"></div>
+            <div data-card="" class="mask front"></div>
+            <div data-card="" class="mask front"></div>
+            <div data-card="" class="mask front"></div>
+            <div data-card="" class="mask front"></div>
+            <div data-card="" class="mask front"></div>
+        </div>
+    </main>
+    <footer></footer>
+    <script src="assets/js/custom.js"></script>
+    <script src="assets/js/class.js"></script>
 </body>
 
 </html>
