modify custom.js for behavior of tiles

--- a/index.html
+++ b/index.html
@@ -16,35 +16,37 @@
         <h1>Mr President</h1>
     </header>
     <main>
+        <input type="button" value="Jouer" id="start">
+        <input type="button" value="Reset" id="reset">
         <div id="container">
-            <div data-card="" class="mask front">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Obcaecati exercitationem alias, incidunt impedit quas maiores animi doloribus?</div>
-            <div data-card="" class="mask front">Lorem ipsum dolor sit amet.</div>
-            <div data-card="" class="mask front">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Harum laudantium alias, temporibus recusandae non obcaecati rerum consequatur sequi?</div>
-            <div data-card="" class="mask front">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis laborum saepe quas optio suscipit.</div>
-            <div data-card="" class="mask front"></div>
-            <div data-card="" class="mask front"></div>
-            <div data-card="" class="mask front"></div>
-            <div data-card="" class="mask front"></div>
-            <div data-card="" class="mask front"></div>
-            <div data-card="" class="mask front"></div>
-            <div data-card="" class="mask front"></div>
-            <div data-card="" class="mask front"></div>
-            <div data-card="" class="mask front"></div>
-            <div data-card="" class="mask front"></div>
-            <div data-card="" class="mask front"></div>
-            <div data-card="" class="mask front"></div>
-            <div data-card="" class="mask front"></div>
-            <div data-card="" class="mask front"></div>
-            <div data-card="" class="mask front"></div>
-            <div data-card="" class="mask front"></div>
-            <div data-card="" class="mask front"></div>
-            <div data-card="" class="mask front"></div>
-            <div data-card="" class="mask front"></div>
-            <div data-card="" class="mask front"></div>
-            <div data-card="" class="mask front"></div>
-            <div data-card="" class="mask front"></div>
-            <div data-card="" class="mask front"></div>
-            <div data-card="" class="mask front"></div>
+            <div id="tile1" data-card="" class="mask front">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Obcaecati exercitationem alias, incidunt impedit quas maiores animi doloribus?</div>
+            <div id="tile2" data-card="" class="mask front">Lorem ipsum dolor sit amet.</div>
+            <div id="tile3" data-card="" class="mask front">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Harum laudantium alias, temporibus recusandae non obcaecati rerum consequatur sequi?</div>
+            <div id="tile4" data-card="" class="mask front">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis laborum saepe quas optio suscipit.</div>
+            <div id="tile5" data-card="" class="mask front"></div>
+            <div id="tile6" data-card="" class="mask front"></div>
+            <div id="tile7" data-card="" class="mask front"></div>
+            <div id="tile8" data-card="" class="mask front"></div>
+            <div id="tile9" data-card="" class="mask front"></div>
+            <div id="tile10" data-card="" class="mask front"></div>
+            <div id="tile11" data-card="" class="mask front"></div>
+            <div id="tile12" data-card="" class="mask front"></div>
+            <div id="tile13" data-card="" class="mask front"></div>
+            <div id="tile14" data-card="" class="mask front"></div>
+            <div id="tile15" data-card="" class="mask front"></div>
+            <div id="tile16" data-card="" class="mask front"></div>
+            <div id="tile17" data-card="" class="mask front"></div>
+            <div id="tile18" data-card="" class="mask front"></div>
+            <div id="tile19" data-card="" class="mask front"></div>
+            <div id="tile20" data-card="" class="mask front"></div>
+            <div id="tile21" data-card="" class="mask front"></div>
+            <div id="tile22" data-card="" class="mask front"></div>
+            <div id="tile23" data-card="" class="mask front"></div>
+            <div id="tile24" data-card="" class="mask front"></div>
+            <div id="tile25" data-card="" class="mask front"></div>
+            <div id="tile26" data-card="" class="mask front"></div>
+            <div id="tile27" data-card="" class="mask front"></div>
+            <div id="tile28" data-card="" class="mask front"></div>
         </div>
     </main>
     <footer></footer>
